--- a/app/i18n/locales/ja/common.json
+++ b/app/i18n/locales/ja/common.json
@@ -1,10 +1,8 @@
 {
   "home": {
-    "text-1": "こんにちわ",
-    "text-2": "fdfasdfsadfa",
     "hero": {
-      "title": "ITの力でビジネスを最大化する。",
-      "description": "デジタルの力であなたの会社の成長の未来を切り開くパートナーになります。",
+      "title": "生成AI×デジタルイノベーションで、あなたのビジネスを新たな高みへ。",
+      "description": "「AIを活用した自動化からECサイト構築、モダンアプリ開発まで。最先端の技術を駆使し、売上アップと業務効率化を同時に実現します。」",
       "request_docs": "資料を請求する",
       "view_pricing": "料金表を見る",
       "scroll": "SCROLL"
