--- a/app/i18n/locales/en/common.json
+++ b/app/i18n/locales/en/common.json
@@ -7,7 +7,9 @@
       "description": "Through Wantedly, connect with talented professionals who resonate with your company's vision. We help you achieve recruitment success beyond just conditions and budgets.",
       "request_docs": "Request Documents",
       "view_pricing": "View Pricing",
-      "scroll": "SCROLL"
+      "scroll": "SCROLL",
+      "banner_text": "Learn how to leverage our services in your business",
+      "read_more": "Read more"
     },
     "whyus": {
       "title": "Why Choose KUROFUNE?"
