refactor: replace hardcoded colors with semantic color tokens for dark mode compatibility
- Replace hardcoded colors (bg-white, text-gray-900, etc.) with semantic tokens (bg-background, text-foreground, etc.) - Update background colors and text colors to use CSS variables - Ensure consistent color scheme in both light and dark modes - Improve visual accessibility in dark mode

--- a/app/i18n/locales/en/common.json
+++ b/app/i18n/locales/en/common.json
@@ -29,7 +29,8 @@
       "subtext": "New Graduates・Internships / Mid-Career・Side Jobs / All Positions"
     },
     "pricing": {
-      "title": "No Success Fees.\nKeep Your Recruitment Costs Low.",
+      "subtitle": "No Success Fees.\nKeep Your Recruitment Costs Low.",
+      "title": "Pricing",
       "description": "Wantedly uses a fixed monthly pricing model without success fees, allowing you to optimize your recruitment strategy while keeping costs predictable.",
       "button": "View Pricing"
     },
