--- a/app/i18n/locales/ja/common.json
+++ b/app/i18n/locales/ja/common.json
@@ -33,7 +33,8 @@
       "subtext": "個人事業主からスタートアップまで / 短期・長期案件 / 全業種対応"
     },
     "pricing": {
-      "title": "追加請求無し。\n導入コストを抑えられます。",
+      "subtitle": "追加請求無し。\n導入コストを抑えられます。",
+      "title": "Pricing",
       "description": "当社では、毎月定額の料金プランを採用しており、運用の工夫次第で開発・保守コストを最適化。長期的な視点で投資しやすく、スピーディに成果を実感していただけます。",
       "button": "料金表を見る"
     },
